--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -3,6 +3,7 @@
 @import 'settings/2018_into_orbit';
 @import 'foundation';
 @import 'motion-ui';
+@import 'fonts/fontawesome';
 
 @include foundation-global-styles;
 // @include foundation-grid;
