--- a/src/assets/scss/settings/_2018_into_orbit.scss
+++ b/src/assets/scss/settings/_2018_into_orbit.scss
@@ -60,6 +60,9 @@
 //  55. Top Bar
 //  56. Xy Grid
 
+// Internal settings
+//  57. fontawsome
+
 @import 'util/util';
 
 // 1. Global
@@ -78,6 +81,7 @@ $foundation-palette: (
 $light-gray: #bebebe;
 $medium-gray: #cacaca;
 $dark-gray: #646464;
+$contrast-warnings: false;
 
 $body-background: $dark-gray;
 $body-font-color: $light-gray;
@@ -312,7 +316,7 @@ $buttongroup-radius-on-each: true;
 // -----------
 
 $callout-background: $dark-gray;
-$callout-background-fade: 85%;
+$callout-background-fade: 0%;
 $callout-border: 1px solid rgba($light-gray, 0.25);
 $callout-margin: 0 0 1rem 0;
 $callout-padding: 1rem;
@@ -435,7 +439,7 @@ $input-line-height: $global-lineheight;
 $input-background: $dark-gray;
 $input-background-focus: $dark-gray;
 $input-background-disabled: $light-gray;
-$input-border: 1px solid $medium-gray;
+$input-border: 1px solid $light-gray;
 $input-border-focus: 1px solid $dark-gray;
 $input-padding: $form-spacing / 2;
 $input-shadow: inset 0 1px 2px rgba($light-gray, 0.1);
@@ -865,3 +869,9 @@ $grid-padding-gutters: $grid-margin-gutters;
 $grid-container-padding: $grid-padding-gutters;
 $grid-container-max: $global-width;
 $xy-block-grid-max: 8;
+
+
+//  57. fontawsome
+// -----------
+
+$fa-font-path: "/webfonts";
