--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -4,6 +4,10 @@
 @import 'foundation';
 @import 'motion-ui';
 @import 'fonts/fontawesome';
+@import 'hamburgers';
+
+@import 'components/scrollbar';
+@import 'components/topbar-page';
 
 @include foundation-global-styles;
 // @include foundation-grid;
@@ -52,3 +56,7 @@
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
+
+[data-hamburger] {
+	@extend .hamburger
+}
