--- a/src/assets/scss/settings/_2018_into_orbit.scss
+++ b/src/assets/scss/settings/_2018_into_orbit.scss
@@ -61,7 +61,8 @@
 //  56. Xy Grid
 
 // Internal settings
-//  57. fontawsome
+//  57. Fontawsome
+//  58. Hamburgers
 
 @import 'util/util';
 
@@ -283,7 +284,7 @@ $breadcrumbs-item-separator-color: $medium-gray;
 
 $button-font-family: inherit;
 $button-padding: 0.85em 1em;
-$button-margin: 0 0 $global-margin 0;
+$button-margin: 0;
 $button-fill: solid;
 $button-background: $primary-color;
 $button-background-hover: scale-color($button-background, $lightness: -15%);
@@ -853,7 +854,7 @@ $topbar-background: $light-gray;
 $topbar-submenu-background: $topbar-background;
 $topbar-title-spacing: 0.5rem 1rem 0.5rem 0;
 $topbar-input-width: 200px;
-$topbar-unstack-breakpoint: medium;
+$topbar-unstack-breakpoint: small;
 
 // 56. Xy Grid
 // -----------
@@ -875,3 +876,13 @@ $xy-block-grid-max: 8;
 // -----------
 
 $fa-font-path: "/webfonts";
+
+
+//  57. fontawsome
+// -----------
+
+$hamburger-types: (
+  vortex,
+  vortex-r
+);
+$hamburger-layer-color: $dark-gray;
