--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -7,7 +7,8 @@
 @import 'hamburgers';
 
 @import 'components/scrollbar';
-@import 'components/topbar-page';
+@import 'components/topbar-extension';
+@import 'components/notifications';
 
 @include foundation-global-styles;
 // @include foundation-grid;
