--- a/src/assets/scss/components/_topbar-extension.scss
+++ b/src/assets/scss/components/_topbar-extension.scss
@@ -1,9 +1,14 @@
 .top-bar {
-  height: 3.5rem;
+	height: 3.5rem;
 
-  .button, .button-group, input {
-  	margin: 0;
-  }
+	.button, .button-group, input {
+		margin: 0 !important;
+		display: inline-block;
+	}
+
+	.menu > :not(il):not(:first-child) { // Force non-il to have a space between them
+		margin-left: 1em;
+	}
 
 }
 
@@ -12,7 +17,6 @@
 	height: calc(100% - 3.5rem);
 }
 
-.top-bar.secondary {
-    background: white !important;
-    border-bottom: $light-gray 2px solid;
+.top-bar.secondary, .top-bar.secondary ul {
+	background: white !important;
 }
