--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -24,44 +24,44 @@
           <div class="grid-x grid-padding-x">
             <ul class="vertical menu">
               <li class="menu-text">Layout & Navigation</li>
-              <li><a href="layout.html">        Layout guide</a></li>
-              <li><a href="grid.html">          Grid</a></li>
-              <li><a href="topbar.html">        Topbar</a></li>
-              <li><a href="tabs.html">          Tabs</a></li>
-              <li><a href="menu.html">          Menu</a></li>
-              <li><a href="off_canvas.html">    Off canvas</a></li>
+              <li><a href="{{root}}docs/layout/layout.html">          Layout guide</a></li>
+              <li><a href="{{root}}docs/layout/grid.html">            Grid</a></li>
+              <li><a href="{{root}}docs/layout/topbar.html">          Topbar</a></li>
+              <li><a href="{{root}}docs/layout/tabs.html">            Tabs</a></li>
+              <li><a href="{{root}}docs/layout/menu.html">            Menu</a></li>
+              <li><a href="{{root}}docs/layout/off_canvas.html">      Off canvas</a></li>
 
               <li class="menu-text">Apperence</li>
-              <li><a href="apperence.html">     Apperence guide</a></li>
-              <li><a href="texts.html">         Texts</a></li>
-              <li><a href="icon.html">          Page Icon</a></li>
-              <li><a href="backgrounds.html">   Background images</a></li>
-              <li><a href="animations.html">    Animations</a></li>
+              <li><a href="{{root}}docs/appearance/apperence.html">   Apperence guide</a></li>
+              <li><a href="{{root}}docs/appearance/texts.html">       Texts</a></li>
+              <li><a href="{{root}}docs/appearance/icon.html">        Page Icon</a></li>
+              <li><a href="{{root}}docs/appearance/backgrounds.html"> Background images</a></li>
+              <li><a href="{{root}}docs/appearance/animations.html">  Animations</a></li>
 
               <li class="menu-text">Elements</li>
-              <li><a href="buttons.html">       Buttons</a></li>
-              <li><a href="slider.html">        Slider</a></li>
-              <li><a href="switch.html">        Switch</a></li>
-              <li><a href="dropdown.html">      Dropdown</a></li>
-              <li><a href="hamburger.html">     Hamburger</a></li>
-              <li><a href="badge.html">         Badge</a></li>
-              <li><a href="label.html">         Label</a></li>
-              <li><a href="orbit.html">         Orbit - Photos slides</a></li>
-              <li><a href="progress_bar.html">  Porgress bar</a></li>
-              <li><a href="tooltip.html">       Tooltip</a></li>
-              <li><a href="loader.html">        Loader</a></li>
-              <li><a href="errors.html">        Errors</a></li>
+              <li><a href="{{root}}docs/elements/buttons.html">       Buttons</a></li>
+              <li><a href="{{root}}docs/elements/slider.html">        Slider</a></li>
+              <li><a href="{{root}}docs/elements/switch.html">        Switch</a></li>
+              <li><a href="{{root}}docs/elements/dropdown.html">      Dropdown</a></li>
+              <li><a href="{{root}}docs/elements/hamburger.html">     Hamburger</a></li>
+              <li><a href="{{root}}docs/elements/badge.html">         Badge</a></li>
+              <li><a href="{{root}}docs/elements/label.html">         Label</a></li>
+              <li><a href="{{root}}docs/elements/orbit.html">         Orbit - Photos slides</a></li>
+              <li><a href="{{root}}docs/elements/progress_bar.html">  Porgress bar</a></li>
+              <li><a href="{{root}}docs/elements/tooltip.html">       Tooltip</a></li>
+              <li><a href="{{root}}docs/elements/loader.html">        Loader</a></li>
+              <li><a href="{{root}}docs/elements/errors.html">        Errors</a></li>
 
               <li class="menu-text">Containers</li>
-              <li><a href="card.html">          Card</a></li>
-              <li><a href="callout.html">       Callout</a></li>
-              <li><a href="reveal.html">        Reveal (modal)</a></li>
-              <li><a href="accordion.html">     Accordion</a></li>
+              <li><a href="{{root}}docs/containers/card.html">        Card</a></li>
+              <li><a href="{{root}}docs/containers/callout.html">     Callout</a></li>
+              <li><a href="{{root}}docs/containers/reveal.html">      Reveal (modal)</a></li>
+              <li><a href="{{root}}docs/containers/accordion.html">   Accordion</a></li>
 
               <li class="menu-text">Helper modules</li>
-              <li><a href="abide.html">        Abide - form validation</a></li>
-              <li><a href="interchange.html">  Interchange - size changed content</a></li>
-              <li><a href="toggler.html">      Toggler - reponsive content</a></li>
+              <li><a href="{{root}}docs/modules/abide.html">        Abide - form validation</a></li>
+              <li><a href="{{root}}docs/modules/interchange.html">  Interchange - size changed content</a></li>
+              <li><a href="{{root}}docs/modules/toggler.html">      Toggler - reponsive content</a></li>
               
             </ul>
           </div>
