Added some docs

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -12,6 +12,7 @@
 @import 'extensions/body-extension';
 @import 'extensions/topbar-extension';
 @import 'extensions/button-extension';
+@import 'extensions/code-extension';
 
 @include foundation-global-styles;
 // @include foundation-grid;
