--- a/src/assets/scss/settings/_2018_into_orbit.scss
+++ b/src/assets/scss/settings/_2018_into_orbit.scss
@@ -168,7 +168,7 @@ $paragraph-text-rendering: optimizeLegibility;
 $code-color: $black;
 $code-font-family: $font-family-monospace;
 $code-font-weight: $global-weight-normal;
-$code-background: $light-gray;
+$code-background: $medium-gray;
 $code-border: 1px solid $medium-gray;
 $code-padding: rem-calc(2 5 1);
 $anchor-color: $primary-color;
