Added disabled class pointer-events: none

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -8,6 +8,7 @@
 
 @import 'components/notifications';
 @import 'components/scrollbar';
+@import 'components/disabled';
 
 @import 'extensions/body-extension';
 @import 'extensions/button-extension';
