--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -9,6 +9,7 @@
 @import 'components/notifications';
 @import 'components/scrollbar';
 @import 'components/disabled';
+@import 'components/loader';
 
 @import 'extensions/body-extension';
 @import 'extensions/button-extension';
