--- a/src/assets/scss/settings/_2018_into_orbit.scss
+++ b/src/assets/scss/settings/_2018_into_orbit.scss
@@ -858,7 +858,7 @@ $topbar-background: $light-gray;
 $topbar-submenu-background: $topbar-background;
 $topbar-title-spacing: 0.5rem 1rem 0.5rem 0;
 $topbar-input-width: 200px;
-$topbar-unstack-breakpoint: medium;
+$topbar-unstack-breakpoint: 0;
 
 // 56. Xy Grid
 // -----------
