Added table extension

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -16,6 +16,7 @@
 @import 'extensions/card-extension';
 @import 'extensions/code-extension';
 @import 'extensions/reveal-extension';
+@import 'extensions/table-extension';
 @import 'extensions/topbar-extension';
 
 @include foundation-global-styles;
