Added menu burger

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -10,6 +10,7 @@
 @import 'components/scrollbar';
 @import 'components/disabled';
 @import 'components/loader';
+@import 'components/hamburger';
 
 @import 'extensions/body-extension';
 @import 'extensions/button-extension';
