--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -69,5 +69,9 @@
 @include motion-ui-animations;
 
 [data-hamburger] {
-	@extend .hamburger
+	@extend .hamburger;
+}
+
+html {
+	font-size: 2.5vh !important;
 }
