--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -19,6 +19,7 @@
 @import 'extensions/reveal-extension';
 @import 'extensions/table-extension';
 @import 'extensions/topbar-extension';
+@import 'extensions/tooltip-extension';
 
 @include foundation-global-styles;
 // @include foundation-grid;
