--- a/current/components/segment.rtl.css
+++ b/current/components/segment.rtl.css
@@ -877,3 +877,6 @@
          Site Overrides
 *******************************/
 
+.ui.segment.transparent {
+  background: rgba(255, 255, 255, 0.5);
+}
