--- a/current/semantic.css
+++ b/current/semantic.css
@@ -747,6 +747,14 @@ body .ui.inverted::-webkit-scrollbar-thumb:hover {
 /*******************************
          Site Overrides
 *******************************/
+
+.fll.image-background {
+  background-image: url('image/background_image.jpg');
+}
+
+.fll.tile-background {
+  background-image: url('image/background_tile.jpg');
+}
 /*!
  * # Semantic UI 2.4.2 - Button
  * http://github.com/semantic-org/semantic-ui/
@@ -5569,7 +5577,7 @@ i.flag:not(.icon) {
 i.flag:not(.icon):before {
   display: inline-block;
   content: '';
-  background: url("./../dist/themes/default/assets/images/flags.png") no-repeat -108px -1976px;
+  background: url("./themes/default/assets/images/flags.png") no-repeat -108px -1976px;
   width: 16px;
   height: 11px;
 }
@@ -7656,8 +7664,8 @@ a.ui.inverted.grey.header:hover {
 
 @font-face {
   font-family: 'Icons';
-  src: url("./../dist/themes/default/assets/fonts/icons.eot");
-  src: url("./../dist/themes/default/assets/fonts/icons.eot?#iefix") format('embedded-opentype'), url("./../dist/themes/default/assets/fonts/icons.woff2") format('woff2'), url("./../dist/themes/default/assets/fonts/icons.woff") format('woff'), url("./../dist/themes/default/assets/fonts/icons.ttf") format('truetype'), url("./../dist/themes/default/assets/fonts/icons.svg#icons") format('svg');
+  src: url("./themes/default/assets/fonts/icons.eot");
+  src: url("./themes/default/assets/fonts/icons.eot?#iefix") format('embedded-opentype'), url("./themes/default/assets/fonts/icons.woff2") format('woff2'), url("./themes/default/assets/fonts/icons.woff") format('woff'), url("./themes/default/assets/fonts/icons.ttf") format('truetype'), url("./themes/default/assets/fonts/icons.svg#icons") format('svg');
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -12935,8 +12943,8 @@ i.icon.youtube.play:before {
 
 @font-face {
   font-family: 'outline-icons';
-  src: url("./../dist/themes/default/assets/fonts/outline-icons.eot");
-  src: url("./../dist/themes/default/assets/fonts/outline-icons.eot?#iefix") format('embedded-opentype'), url("./../dist/themes/default/assets/fonts/outline-icons.woff2") format('woff2'), url("./../dist/themes/default/assets/fonts/outline-icons.woff") format('woff'), url("./../dist/themes/default/assets/fonts/outline-icons.ttf") format('truetype'), url("./../dist/themes/default/assets/fonts/outline-icons.svg#icons") format('svg');
+  src: url("./themes/default/assets/fonts/outline-icons.eot");
+  src: url("./themes/default/assets/fonts/outline-icons.eot?#iefix") format('embedded-opentype'), url("./themes/default/assets/fonts/outline-icons.woff2") format('woff2'), url("./themes/default/assets/fonts/outline-icons.woff") format('woff'), url("./themes/default/assets/fonts/outline-icons.ttf") format('truetype'), url("./themes/default/assets/fonts/outline-icons.svg#icons") format('svg');
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -13441,8 +13449,8 @@ i.icon.star.empty:before {
 
 @font-face {
   font-family: 'brand-icons';
-  src: url("./../dist/themes/default/assets/fonts/brand-icons.eot");
-  src: url("./../dist/themes/default/assets/fonts/brand-icons.eot?#iefix") format('embedded-opentype'), url("./../dist/themes/default/assets/fonts/brand-icons.woff2") format('woff2'), url("./../dist/themes/default/assets/fonts/brand-icons.woff") format('woff'), url("./../dist/themes/default/assets/fonts/brand-icons.ttf") format('truetype'), url("./../dist/themes/default/assets/fonts/brand-icons.svg#icons") format('svg');
+  src: url("./themes/default/assets/fonts/brand-icons.eot");
+  src: url("./themes/default/assets/fonts/brand-icons.eot?#iefix") format('embedded-opentype'), url("./themes/default/assets/fonts/brand-icons.woff2") format('woff2'), url("./themes/default/assets/fonts/brand-icons.woff") format('woff'), url("./themes/default/assets/fonts/brand-icons.ttf") format('truetype'), url("./themes/default/assets/fonts/brand-icons.svg#icons") format('svg');
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -19298,6 +19306,10 @@ ol.ui.horizontal.list li:before,
 /*******************************
          Site Overrides
 *******************************/
+
+.ui.segment.transparent {
+  background: rgba(255, 255, 255, 0.5);
+}
 /*!
  * # Semantic UI 2.4.2 - Step
  * http://github.com/semantic-org/semantic-ui/
