--- a/current/components/icon.rtl.css
+++ b/current/components/icon.rtl.css
@@ -4804,3 +4804,29 @@ i.icon.youtube.square {
          Site Overrides
 *******************************/
 
+
+/* Primary */
+i.primary.icon {
+  color: #2185D0 !important;
+}
+i.inverted.primary.icon {
+  color: #54C8FF !important;
+}
+i.inverted.bordered.primary.icon,
+i.inverted.circular.primary.icon {
+  background-color: #2185D0 !important;
+  color: #FFFFFF !important;
+}
+
+/* Secondary */
+i.secondary.icon {
+  color: #1B1C1D !important;
+}
+i.inverted.secondary.icon {
+  color: #545454 !important;
+}
+i.inverted.bordered.secondary.icon,
+i.inverted.circular.secondary.icon {
+  background-color: #1B1C1D !important;
+  color: #FFFFFF !important;
+}
