--- a/current/components/menu.rtl.css
+++ b/current/components/menu.rtl.css
@@ -2050,3 +2050,15 @@ Floated Menu / Item
          Site Overrides
 *******************************/
 
+.ui.page.menu {
+  height: 3rem;
+  border-radius: 0;
+  border-top-width: 0 !important;
+}
+.ui.page.menu + * {
+  height: calc(100% - 3rem);
+  overflow-y: auto;
+}
+.ui.menu .item.icon > i.icon + .hover.text {
+  margin-right: 0.35714286em;
+}
