--- a/current/components/toast.css
+++ b/current/components/toast.css
@@ -1,5 +1,5 @@
 /*!
- * # Semantic UI 2.4.2 - Step
+ * # Semantic UI 2.4.2 - Toast
  * http://github.com/semantic-org/semantic-ui/
  *
  *
@@ -10,7 +10,7 @@
 
 
 /*******************************
-            Plural
+            Overrides
 *******************************/
 
 .toast-title {
