--- a/src/definitions/elements/toast.less
+++ b/src/definitions/elements/toast.less
@@ -1,5 +1,5 @@
 /*!
- * # Semantic UI - Step
+ * # Semantic UI - Toast
  * http://github.com/semantic-org/semantic-ui/
  *
  *
@@ -10,7 +10,7 @@
 
 
 /*******************************
-             Step
+             Toast
 *******************************/
 
 /*--------------
@@ -23,7 +23,7 @@
 @import (multiple) '../../theme.config';
 
 /*******************************
-            Plural
+            Overrides
 *******************************/
 
 @import 'node_modules/toastr/toastr.less';
