--- a/current/app.rtl.css
+++ b/current/app.rtl.css
@@ -27635,6 +27635,42 @@ Floated Menu / Item
 /*******************************
          Site Overrides
 *******************************/
+
+.ui.scrollable.table {
+  height: 100%;
+  display: block;
+  empty-cells: show;
+  border-spacing: 0;
+}
+
+.ui.scrollable.table thead {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 2.3rem;
+}
+
+.ui.scrollable.table tbody {
+  display: block;
+  position: relative;
+  width: 100%;
+  overflow-y: auto;
+  height: calc(100% - 2.3rem);
+}
+
+.ui.scrollable.table tr {
+  width: 100%;
+  display: -webkit-box;
+  display: flex;
+}
+
+.ui.scrollable.table td,
+.ui.scrollable.table th {
+  flex-basis: 100%;
+  -webkit-box-flex: 1;
+  flex-grow: 1;
+  display: block;
+}
 /*!
  * # Semantic UI 2.4.2 - Ad
  * http://github.com/semantic-org/semantic-ui/
