--- a/current/components/table.css
+++ b/current/components/table.css
@@ -1111,3 +1111,34 @@
          Site Overrides
 *******************************/
 
+.ui.scrollable.table {
+  height: 100%;
+  display: block;
+  empty-cells: show;
+  border-spacing: 0;
+}
+.ui.scrollable.table thead {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 2.3rem;
+}
+.ui.scrollable.table tbody {
+  display: block;
+  position: relative;
+  width: 100%;
+  overflow-y: auto;
+  height: calc(100% - 2.3rem);
+}
+.ui.scrollable.table tr {
+  width: 100%;
+  display: -webkit-box;
+  display: flex;
+}
+.ui.scrollable.table td,
+.ui.scrollable.table th {
+  flex-basis: 100%;
+  -webkit-box-flex: 1;
+          flex-grow: 1;
+  display: block;
+}
