--- a/current/components/icon.css
+++ b/current/components/icon.css
@@ -4806,7 +4806,7 @@ i.primary.icon {
   color: #1E5AA8 !important;
 }
 i.inverted.primary.icon {
-  color: #ffffff !important;
+  color: #4d8cdf !important;
 }
 i.inverted.bordered.primary.icon,
 i.inverted.circular.primary.icon {
