--- a/current/components/button.css
+++ b/current/components/button.css
@@ -3119,8 +3119,8 @@
 .ui.inverted.primary.buttons .button,
 .ui.inverted.primary.button {
   background-color: transparent;
-  box-shadow: 0px 0px 0px 2px #ffffff inset !important;
-  color: #ffffff;
+  box-shadow: 0px 0px 0px 2px #4d8cdf inset !important;
+  color: #4d8cdf;
 }
 .ui.inverted.primary.buttons .button:hover,
 .ui.inverted.primary.button:hover,
@@ -3135,19 +3135,19 @@
 }
 .ui.inverted.primary.buttons .button:hover,
 .ui.inverted.primary.button:hover {
-  background-color: #ffffe5;
+  background-color: #2f7de4;
 }
 .ui.inverted.primary.buttons .button:focus,
 .ui.inverted.primary.button:focus {
-  background-color: #ffffd6;
+  background-color: #1974ea;
 }
 .ui.inverted.primary.buttons .active.button,
 .ui.inverted.primary.active.button {
-  background-color: #ffffe5;
+  background-color: #2b7de8;
 }
 .ui.inverted.primary.buttons .button:active,
 .ui.inverted.primary.button:active {
-  background-color: #ffffcc;
+  background-color: #2671d3;
 }
 
 /* Inverted Basic */
@@ -3161,26 +3161,26 @@
 .ui.inverted.primary.basic.buttons .button:hover,
 .ui.inverted.primary.buttons .basic.button:hover,
 .ui.inverted.primary.basic.button:hover {
-  box-shadow: 0px 0px 0px 2px #ffffe5 inset !important;
-  color: #ffffff !important;
+  box-shadow: 0px 0px 0px 2px #2f7de4 inset !important;
+  color: #4d8cdf !important;
 }
 .ui.inverted.primary.basic.buttons .button:focus,
 .ui.inverted.primary.basic.buttons .button:focus,
 .ui.inverted.primary.basic.button:focus {
-  box-shadow: 0px 0px 0px 2px #ffffd6 inset !important;
-  color: #ffffff !important;
+  box-shadow: 0px 0px 0px 2px #1974ea inset !important;
+  color: #4d8cdf !important;
 }
 .ui.inverted.primary.basic.buttons .active.button,
 .ui.inverted.primary.buttons .basic.active.button,
 .ui.inverted.primary.basic.active.button {
-  box-shadow: 0px 0px 0px 2px #ffffe5 inset !important;
-  color: #ffffff !important;
+  box-shadow: 0px 0px 0px 2px #2b7de8 inset !important;
+  color: #4d8cdf !important;
 }
 .ui.inverted.primary.basic.buttons .button:active,
 .ui.inverted.primary.buttons .basic.button:active,
 .ui.inverted.primary.basic.button:active {
-  box-shadow: 0px 0px 0px 2px #ffffcc inset !important;
-  color: #ffffff !important;
+  box-shadow: 0px 0px 0px 2px #2671d3 inset !important;
+  color: #4d8cdf !important;
 }
 
 /*-------------------
