--- a/current/components/input.rtl.css
+++ b/current/components/input.rtl.css
@@ -510,3 +510,19 @@
   border-top-right-radius: 0;
   border-bottom-right-radius: 0;
 }
+input[type="range"] {
+  -webkit-appearance: none;
+  background: rgba(0, 0, 0, 0.05);
+  height: 1.5rem;
+  border-radius: 0.75rem;
+  outline: none;
+}
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  box-shadow: 0px 1px 2px 0 rgba(34, 36, 38, 0.15), 0px 0px 0px 1px rgba(34, 36, 38, 0.15) inset;
+  background: #FFFFFF -webkit-gradient(linear, right top, right bottom, from(transparent), to(rgba(0, 0, 0, 0.05))) !important;
+  background: #FFFFFF linear-gradient(transparent, rgba(0, 0, 0, 0.05)) !important;
+  height: 1.5rem;
+  width: 1.5rem;
+  border-radius: 50%;
+}
