--- a/current/components/site.css
+++ b/current/components/site.css
@@ -203,11 +203,11 @@ body .ui.inverted::-webkit-scrollbar-thumb:hover {
 
 .fll.image-background,
 .fll.tile-background {
-  background-image: url('assets/images/replay_horizontal.jpeg');
+  background-image: url('assets/images/replay_horizontal.png');
   background-position: bottom center;
   background-size: 100%;
   background-repeat: no-repeat;
-  background-color: #a0d9db;
+  background-color: #588c5c;
 }
 :not(:hover) > .hover.text {
   display: none;
